Changelog
=========

9.1-dev0 - (unreleased)
---------------------

9.0 - (2019-01-28)
---------------------
* Jenkins: Add sonarqube step
  [avoinea refs #101552]

8.9 - (2019-01-15)
---------------------
* Bug fix: CSS fixes on publication view
  [alecghica refs #101503]

8.7 - (2018-12-10)
-----------------------
* Bug fix: fixed publication toc rendering when toc has several levels
  [ichim-david refs #100603]

8.6 - (2018-09-21)
---------------------
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]
* Feature: implemented portal message to inform if the PDF metadata Title is
  different then the Title from the Plone.
  [alecghica refs #97572]
* Change: removed "Automatically fill from publication pdf file metadata"
  option for Publications
  [alecghica refs #97572]

8.5 - (2018-04-27)
------------------
* Upgrade step: Added upgrade step, plone.app.caching needs to be reimported,
  it has updated registry settings
  [petchesi-iulian refs #94520]
* Change: Modified the pdf view so that the filename request receives the
  correct filename
  [petchesi-iulian refs #94520]

8.4 - (2018-03-19)
------------------
* Feature: Modified portal messages styling and moved the see older versions
  notification to the bottom of the page
  [petchesi-iulian refs #90589]
* Feature: Modified the ordering of elements in the template, modify elements
  style depending on pdf enabled status
  [petchesi-iulian refs #90589]

8.3 - (2018-03-01)
------------------
* Feature: Implemented responsive design and resized the viewer
  [petchesi-iulian refs #90589]
* Feature: Modified the report template and added a browser view which 'serves'
  the pdf file to the viewer, also modified the styling of the reports
  [petchesi-iulian refs #90589]
* Bug fix: avoid js error within report_file.pt by calling js within dom ready
  [ichim-david refs #91577]

8.2 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint