@@ -1,33 +1,0 @@
-""" Config variables
-"""
-
-META_TEMPLATE = u"""
-InfoKey: Title
-InfoValue: %(title)s
-InfoKey: Subject
-InfoValue: %(description)s
-InfoKey: Keywords
-InfoValue: %(keywords_str)s
-InfoKey: Creator
-InfoValue: %(authors_str)s
-InfoKey: Producer
-InfoValue: reports.eea.europa.eu
-InfoKey: Authors
-InfoValue: %(authors_str)s
-InfoKey: Publishers
-InfoValue: %(publishers_str)s
-InfoKey: ISBN
-InfoValue: %(isbn)s
-InfoKey: OrderId
-InfoValue: %(order_id)s
-InfoKey: Copyrights
-InfoValue: %(copyrights)s
-InfoKey: Language
-InfoValue: %(lang)s
-InfoKey: Price
-InfoValue: %(price)s
-InfoKey: SerialTitle
-InfoValue: %(serial_title_str)s
-InfoKey: Themes
-InfoValue: %(keywords_str)s
-"""
