@@ -3,6 +3,10 @@ Changelog
 
 9.1-dev0 - (unreleased)
 ---------------------
+* Bug fix: fixed the CSS for "Change language" and publication message display
+  [alecghica refs #101834]
+* Feature: removed/hidden metadata related to EU Publications or which was unused
+  [alecghica refs #101834]
 
 9.0 - (2019-01-28)
 ---------------------
